--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dev_dependencies:
   bluejay: ^1.4.0
   provider: ^6.0.2
   auto_animated: ^3.0.1
+  path: 1.8.0
+  sqflite: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
