--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dev_dependencies:
   path: 1.8.0
   sqflite: ^2.0.2
   flex_color_picker: ^2.3.1
+  like_button: ^2.0.4
+  morpheus: ^1.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
