--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   flex_color_picker: ^2.3.1
   like_button: ^2.0.4
   morpheus: ^1.2.3
+  flutter_native_splash: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
