--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
   like_button: ^2.0.4
   morpheus: ^1.2.3
   flutter_native_splash: ^2.1.0
+  flutter_multi_select_items: ^0.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
