--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,14 @@ dev_dependencies:
   modal_bottom_sheet: ^2.0.1
   persistent_bottom_nav_bar_v2: ^4.1.3
   flutter_staggered_animations: ^1.0.0
+  scroll_app_bar: ^2.0.0
+  flutter_form_builder: ^7.1.1
+  form_builder_extra_fields: ^7.1.0
+  smart_select: ^4.3.2
+  multi_select_flutter: ^4.1.2
+  dropdown_search: ^2.0.1
+  colornames: ^0.0.1+3
+  lazy_load_indexed_stack: ^0.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
