--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,8 @@ dev_dependencies:
   multi_select_flutter: ^4.1.2
   dropdown_search: ^2.0.1
   colornames: ^0.0.1+3
-  lazy_load_indexed_stack: ^0.1.3
+  form_field_validator: ^1.1.0
+  uuid: ^3.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
