--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dev_dependencies:
   colornames: ^0.0.1+3
   form_field_validator: ^1.1.0
   uuid: ^3.0.6
+  tab_indicator_styler: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -89,6 +90,8 @@ flutter:
         - asset: fonts/Montserrat/static/Montserrat-Light.ttf
         - asset: fonts/Montserrat/static/Montserrat-Regular.ttf
 
+  assets:
+    - assets/profile_placeholder.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
